<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="set">set</string>
    <string name="take_pills">take_pills</string>
    <string name="meditation">Meditation</string>
    <string name="go_on_a_walk">go_on_a_walk</string>
    <string name="water_break">water_break</string>
</resources>